# QTInterface

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  projectmanager.cpp  projectmanager.h
qml/: BottomPanel.qml  CentralWorkspace.qml  LeftPanel.qml  MainToolbar.qml  RightPanel.qml
